# parrrot

./: .gitignore  CONTRIBUTING.md  DOCS.md  README.md  devnote.md  index.html  pyproject.toml  setup.py
parrrot/: __init__.py  config.py  main.py  onboarding.py
parrrot/core/: __init__.py  agent.py  context.py  learner.py  memory.py  router.py  scheduler.py
parrrot/models/: __init__.py  base.py  ollama_cloud.py  ollama_local.py
parrrot/skills/: __init__.py  loader.py
parrrot/skills/examples/: clean_desktop.py  daily_briefing.py  watch_and_report.py
parrrot/tools/: __init__.py  browser.py  browser_cdp.py  browser_control.py  calendar_tool.py  chatgpt_tool.py  email_tool.py  filesystem.py  learning_tools.py  notifications.py  pc_control.py  registry.py  screen.py  shell.py  system_info.py  uia_control.py  youtube.py
parrrot/ui/: __init__.py  chat.py  dashboard.py
tests/: test_agent.py  test_config.py  test_filesystem.py  test_memory.py  test_tool_registry.py
